--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://avatars2.githubusercontent.com/u/19350329?s=460&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: 
-  facebook:
+  email: sahilkhan0987@protonmail.com
+  facebook:sahilocelot
   flickr:
   github: codesahil
   instagram: codesahil
-  linkedin:
+  linkedin: /in/sahil-khan-030977128/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: codesahil
