--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars2.githubusercontent.com/u/19350329?s=460&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: sahilkhan0987@protonmail.com
+  email:
   facebook: sahilocelot
   flickr:
   github: codesahil
@@ -37,7 +37,7 @@ footer-links:
 disqus: codesahil
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-109519671-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
