--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: codesahil
   instagram: codesahil
-  linkedin: /in/sahil-khan-030977128/
+  linkedin: /sahil-khan-030977128/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: codesahil
